--- a/info.yaml
+++ b/info.yaml
@@ -22,34 +22,34 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "IN0[0]"
+  ui[1]: "IN0[1]"
+  ui[2]: "IN0[2]"
+  ui[3]: "IN0[3]"
+  ui[4]: "IN0[4]"
+  ui[5]: "IN0[5]"
+  ui[6]: "IN0[6]"
+  ui[7]: "IN0[7]"
 
   # Outputs
-  uo[0]: "CNT[0]"
-  uo[1]: "CNT[1]"
-  uo[2]: "CNT[2]"
-  uo[3]: "CNT[3]"
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "ADD[0]"
+  uo[1]: "ADD[1]"
+  uo[2]: "ADD[2]"
+  uo[3]: "ADD[3]"
+  uo[4]: "ADD[4]"
+  uo[5]: "ADD[5]"
+  uo[6]: "ADD[6]"
+  uo[7]: "ADD[7]"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "IN1[0]"
+  uio[1]: "IN1[1]"
+  uio[2]: "IN1[2]"
+  uio[3]: "IN1[3]"
+  uio[4]: "IN1[4]"
+  uio[5]: "IN1[5]"
+  uio[6]: "IN1[6]"
+  uio[7]: "IN1[7]"
 
 # Do not change!
 yaml_version: 6
