--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ project:
   title:        "Verilog Draft"      # Project title
   author:       "Mathieu Escouteloup"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "A draft for a student project"      # One line description of what your project does
+  description:  "A draft for a 2025 student project"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
